feat(v3): add changelog-writer skill with Phase 3 integration
Adds automatic changelog maintenance for v3.0.3:

- New changelog-writer skill with hybrid change type detection
  (spec keywords + git diff analysis with confidence scoring)
- Phase 3 delivery now invokes changelog update in Step 8.5
- Auto-detects: feature, bugfix, breaking, refactor
- Suggests semver bumps based on change type
- Creates CHANGELOG.md from template if missing
- Non-blocking: failures warn but don't stop delivery

Also includes minor fixes to v3 files:
- Fix tasks_folder path in phase3-delivery
- Minor formatting updates across hooks and scripts

--- a/v3/settings.json
+++ b/v3/settings.json
@@ -60,7 +60,7 @@
     "allow": [
       "Read(.agent-os/**)",
       "Read(.claude/**)",
-      "Write(.agent-os/tasks/**)",
+      "Write(.agent-os/specs/**)",
       "Write(.agent-os/progress/**)",
       "Write(.agent-os/state/**)",
       "Bash(.claude/scripts/*)",
