--- a/v3/settings.json
+++ b/v3/settings.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/claude-code-settings.json",
-  "_comment": "Agent OS v4.4.1 - Native Claude Code hooks configuration (no MCP required)",
+  "_comment": "Agent OS v4.5.0 - Native Claude Code hooks configuration (no MCP required)",
 
   "hooks": {
     "SessionStart": [
@@ -29,13 +29,13 @@
 
     "PostToolUse": [
       {
-        "_comment": "Auto-regenerate tasks.md when tasks.json changes",
+        "_comment": "Auto-regenerate tasks.md and auto-graduate future_tasks when tasks.json changes",
         "matcher": "Write|Edit",
         "hooks": [
           {
             "type": "command",
             "command": "bash \"${CLAUDE_PROJECT_DIR}/.claude/hooks/post-file-change.sh\"",
-            "timeout": 5
+            "timeout": 15
           }
         ]
       }
@@ -77,6 +77,6 @@
   },
 
   "env": {
-    "AGENT_OS_VERSION": "4.4.1"
+    "AGENT_OS_VERSION": "4.5.0"
   }
 }
